--- a/Backend/routes/temp_registration.html
+++ b/Backend/routes/temp_registration.html
@@ -15,7 +15,10 @@
 
     <form action="/register" method="POST">
       <div>
-        <input type="text" id="name" name="name" placeholder="Name" required />
+        <input type="text" id="first_name" name="first_name" placeholder="First Name" required />
+      </div>
+      <div>
+        <input type="text" id="last_name" name="last_name" placeholder="Last Name" required />
       </div>
       <div>
         <input
