feat/fix: Fixed missing images and added api route

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/USC-logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/USC-Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="UPD Alternative Housing Portal"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/USC-logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/USC-Logo.png" />
     <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
